# tuni-semweb

./: .gitignore  Dockerfile  LICENSE.md  README.md  __init__.py  app.py  model.py  requirements.txt  utils.py
cobot_behavior/: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.b973015  package.xml
cobot_behavior/include/cobot_behavior/: command.hpp  control.hpp  knowledge.hpp  methodsmodel.hpp  robot.hpp  skill.hpp  taskslist.hpp  tasksmodel.hpp
cobot_behavior/src/: HomeForm.ui.qml  Page1Form.ui.qml  Page1Form.ui.qml.autosave  Page2Form.ui.qml  Page3Form.ui.qml  Page4Form.ui.qml  command.cpp  interaction.js  knowledge.cpp  main.cpp  main.qml  methodsmodel.cpp  qml.qrc  robot.cpp  skill.cpp  taskslist.cpp  tasksmodel.cpp
cobot_behavior/src/qml/: peg.gltf  plate.glb  square_peg.glb  square_peg.json
cobot_knowledge/: package.xml  setup.cfg  setup.py
cobot_knowledge/cobot_knowledge/: world.py
cobot_knowledge/launch/: knowledge.launch.py
cobot_msgs/: CMakeLists.txt  mapping_rules.yaml  package.xml
cobot_msgs/msg/: Command.msg  Triple.msg
cobot_msgs/srv/: Ask.srv  CreateInstance.srv  Describe.srv  Export.srv  GenerateInstanceName.srv  Grasp.srv  ListTargets.srv  MoveGripper.srv  ReachCartesianPose.srv  ReachJointPose.srv  ReadMethods.srv  ReadTasks.srv  (+5 more)
cobot_nlp/: package.xml  setup.cfg  setup.py
cobot_planner/: package.xml  setup.cfg  setup.py
cobot_sem/: package.xml  setup.cfg  setup.py
static/: robot_grammar.cfg
templates/: base.html  cogrob-tut.html  index.html
views/: endpoint.py  grounding.py  interface.py  skills.py
(+88 files in other folders)
