<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot_behavior</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alexandre.angleraud@gmail.com">alex</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cobot_msgs</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qt5-qmake</build_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cobot_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
